--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ layout: default
         {% for form in site.forms %}
           <li><a href="./{{ form.url }}" target="_blank">{{ form.title }}</a></li>
         {% endfor %}
+        <li>To add any file(s) / folder(s) resources, please upload it here: <a href="https://github.com/CS4SG/CS4SG.github.io/tree/master/assets/resources" target="_blank">https://github.com/CS4SG/CS4SG.github.io/tree/master/assets/resources</a></li>
       </ol>
     </article>
   </section>
