--- a/_forms/project_form.html
+++ b/_forms/project_form.html
@@ -89,7 +89,7 @@ let data =
 
 // Convert the text to BLOB.
 const textToBLOB = new Blob([data], { type: 'text/plain' });
-const sFileName = topic+'.md';	   // The file to save the data.
+const sFileName = encodeURIComponent(topic)+'.md';	   // The file to save the data.
 
 let newLink = document.createElement("a");
 newLink.download = sFileName;
